--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.apache.httpcomponents:httpclient:4.5.6'
     compile 'org.jsoup:jsoup:1.11.3'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+
 }
